# FinanceToolkit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  FINANCIALREPORTS_DATASOURCE.md  FMP_ENDPOINT_REPLACEMENT_GUIDE.md  LICENSE  LICENSE.txt  MIGRATION_COMPLETE.md  README.md  Untitled.ipynb  Untitled1.ipynb  dashboard.py  debug_endpoint.py  gitignore.txt  pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py  test_fmp_endpoints.py  test_minimal_endpoints.py  test_remaining_endpoints.py  toolkit_controller.py  validate_endpoints.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: enhancement.md
.github/workflows/: linting.yml  unit_tests.yml
.streamlit/: config.toml
FundamentalAnalysis/: __init__.py  details.py  financial_statements.py  ratios.py  stock_data.py
app/: helpers.py  initalization_model.py  metrics_list.parquet  metrics_view.py  socials_model.py
docs/: Finance Toolkit - 4. Calling Functions Directly.ipynb  custom-ratios.html  external-datasets.html  finance-database.html  functional-based.html  getting-started.html
docs/notebooks/: custom-ratios.ipynb  finance-database.ipynb  getting-started.ipynb
examples/: Finance Toolkit - 0. README Examples.ipynb  Finance Toolkit - 1. Getting Started.ipynb  Finance Toolkit - 10. Fixed Income Module.ipynb  Finance Toolkit - 11. Portfolio Module.ipynb  Finance Toolkit - 2. Combining the Finance Toolkit with the Finance Database.ipynb  Finance Toolkit - 2. Discovery Module.ipynb  Finance Toolkit - 3. Defining Custom Ratios.ipynb  Finance Toolkit - 3. Ratios Module.ipynb  Finance Toolkit - 3. Using External Datasets (OpenBB).ipynb  Finance Toolkit - 4. Calling Functions Directly.ipynb  Finance Toolkit - 4. Models Module.ipynb  Finance Toolkit - 5. Options Module.ipynb  Finance Toolkit - 5. Using External Datasets.ipynb  Finance Toolkit - 6. Technicals Module.ipynb  Finance Toolkit - 7. Risk Module.ipynb  Finance Toolkit - 8. Performance Module.ipynb  Finance Toolkit - 9. Economics Module.ipynb  Finance Toolkit - Using External Datasets.ipynb  Financial Toolkit - 1. Getting Started.ipynb  Financial Toolkit - 2. Combining the Financial Toolkit with the Finance Database.ipynb  Financial Toolkit - 3. Using External Datasets (OpenBB).ipynb  Financial Toolkit - 3. Using External Datasets.ipynb  Financial Toolkit - 4. Calling Functions Directly.ipynb  README.md
examples/external_datasets/: GOOGL_balance.csv  GOOGL_cash.csv  GOOGL_income.csv  README.md  TSLA_balance.csv  TSLA_cash.csv  TSLA_income.csv  adanos_market_sentiment.py  cash.csv  income.csv
examples/normalisation/: README.md  balance.csv  income.csv
financetoolkit/: __init__.py  cache_model.py  currencies_model.py  error_model.py  fmp_model.py  fundamentals_model.py  helpers.py  historical_model.py  logger_model.py  normalization_model.py  sentiment_model.py  toolkit_controller.py  yfinance_model.py
financetoolkit/base/: fundamentals_model.py  helpers.py  historical_model.py  models_controller.py  normalization_model.py  performance_controller.py  ratios_controller.py  risk_controller.py  technical_controller.py  technicals_controller.py  toolkit_controller.py
financetoolkit/discovery/: discovery_controller.py  discovery_model.py
financetoolkit/economics/: economics_controller.py  fed_model.py  gmdb_model.py  oecd_model.py
financetoolkit/fixedincome/: bond_model.py  derivative_model.py  ecb_model.py  euribor_model.py  fed_model.py  fixedincome_controller.py  fred_model.py  helpers.py
financetoolkit/historical/: price.py
financetoolkit/models/: altman_model.py  dupont.py  dupont_model.py  enterprise.py  enterprise_model.py  growth_model.py  helpers.py  intrinsic.py  intrinsic_model.py  models_controller.py  piotroski_model.py  wacc.py  wacc_model.py
financetoolkit/normalization/: balance.csv  balance_yf.csv  cash.csv  income.csv
financetoolkit/options/: binomial_trees_model.py  black_scholes_model.py  greeks_model.py  helpers.py  options_controller.py  options_model.py
financetoolkit/performance/: helpers.py  performance.py  performance_controller.py  performance_model.py  risk_return.py
financetoolkit/portfolio/: config.yaml  helpers.py  overview_model.py  portfolio.py  portfolio_controller.py  portfolio_model.py
financetoolkit/ratios/: efficiency.py  efficiency_model.py  helpers.py  liquidity.py  liquidity_model.py  performance.py  profitability.py  profitability_model.py  ratios_controller.py  solvency.py  solvency_model.py  valuation.py  valuation_model.py
financetoolkit/risk/: black_scholes_model.py  cvar_model.py  evar_model.py  garch_model.py  helpers.py  risk.py  risk_controller.py  risk_model.py  var_model.py
financetoolkit/technical/: breadth.py  breadth_model.py  momentum.py  momentum_model.py  overlap.py  overlap_model.py  statistic_model.py  technicals_controller.py  volatility.py  volatility_model.py  volume.py
financetoolkit/technicals/: breadth_model.py  helpers.py  momentum_model.py  overlap_model.py  statistic_model.py  technicals_controller.py  volatility_model.py
financetoolkit/utilities/: cache_model.py  error_model.py  external_dataset_model.py  logger_model.py  utilities_controller.py  utilities_model.py
financialtoolkit/: __init__.py  analyzer.py  fundamentals.py  historical.py  normalization.py  settings.py
financialtoolkit/base/: helpers.py  models_controller.py  ratios_controller.py  toolkit_controller.py
financialtoolkit/models/: dupont.py
financialtoolkit/normalization/: README.md  balance.csv  cash.csv  income.csv
fundamentalanalysis/: __init__.py  details.py  financial_statements.py  ratios.py  stock_data.py
pages/: README.md  helpers.py  initalization_model.py  metrics_list.parquet  metrics_view.py  portfolio.py  socials_model.py  stock_list.parquet
tests/: __init__.py  conftest.py  test_currencies_model.py  test_fundamentals_model.py  test_helpers.py  test_historical_model.py  test_normalization_model.py  test_sentiment_model.py  test_toolkit_controller.py  test_toolkit_sentiment.py
(+923 files in other folders)
